// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute convert api should return success 1`] = `
Object {
  "data": Object {
    "result": 1785.0181286441143,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1785.0181286441143,
  "statusCode": 200,
}
`;

exports[`execute latest api returns success with batched quote symbols 1`] = `
Object {
  "data": Object {
    "base": "BTC",
    "date": "2022-01-12",
    "rates": Object {
      "ADA": 34420.099699678925,
      "AED": 157869.73190424326,
      "AFN": 4533454.346551903,
      "ALL": 4611869.442705803,
      "ALU": 457512.44673674536,
      "AMD": 20708080.885358065,
      "ANG": 77488.27531768024,
      "AOA": 22991090.53931294,
      "ARS": 4449864.237155203,
      "AUD": 59603.210683719575,
      "AWG": 77382.34004156635,
      "AZN": 72934.52797757051,
      "BAM": 74022.57059370051,
      "BBD": 86778.40975389346,
      "BCH": 114.43020557818734,
      "BDT": 3695750.113217646,
      "BGN": 74080.17833079498,
      "BHD": 16213.513515605036,
      "BIF": 85733232.60383086,
      "BMD": 42973.95367228367,
      "BND": 58081.65522197044,
      "BOB": 295859.96786425554,
      "BRASS": 182657.82261646594,
      "BRL": 240655.52632386808,
      "BRONZE": 245895.75196310272,
      "BSD": 42981.51306113457,
      "BTN": 3180158.214943148,
      "BWP": 498649.94556988915,
      "BYN": 110295.87400735004,
      "BYR": 842449506.1783893,
      "BZD": 86665.92697938076,
      "CAD": 53942.78040543914,
      "CDF": 86264375.6136304,
      "CHF": 39707.042458925935,
      "CLF": 1288.9386437526389,
      "CLP": 35572044.79716701,
      "CNH": 273972.66518806823,
      "CNY": 273750.67750075704,
      "COP": 171563568.9867397,
      "CRC": 27542807.1416669,
      "CUC": 43004.031529732805,
      "CVE": 4173245.629044662,
      "CZK": 923883.7795526681,
      "DJF": 7654497.872802941,
      "DKK": 281596.6888968289,
      "DOP": 2476896.8899345375,
      "DZD": 5989240.34317165,
      "EGP": 676781.2011974644,
      "ERN": 644960.7026415234,
      "ETB": 2133643.3396611162,
      "ETH": 13.045173233537986,
      "EUR": 37810.23007378478,
      "FJD": 91347.44562511684,
      "FKP": 32423.510362491816,
      "GBP": 31502.473683024342,
      "GEL": 132811.4673703818,
      "GGP": 32431.28982672883,
      "GHS": 265932.76565723185,
      "GIP": 32434.207125817706,
      "GMD": 2266368.8495559576,
      "GNF": 391544961.9292882,
      "GTQ": 331267.2110919065,
      "GYD": 8991964.805045675,
      "HKD": 335156.1023817589,
      "HNL": 1057567.8988983815,
      "HRK": 284517.2198514912,
      "HTG": 4361660.872692262,
      "HUF": 13473896.905506713,
      "IDR": 616462440.5189553,
      "ILS": 133776.96943556736,
      "IMP": 32443.607311770764,
      "INDIUM": 3056.762183545376,
      "INR": 3177379.117728167,
      "IQD": 62744204.07948827,
      "IRD": 10.35920755077598,
      "IRON": 10900296.730287291,
      "ISK": 5558863.699532032,
      "JEP": 32443.283167427555,
      "JMD": 6637021.918943811,
      "JOD": 30493.345643247656,
      "JPY": 4960621.336064587,
      "KES": 4871671.4261624925,
      "KGS": 3645998.5469313296,
      "KHR": 175160862.22859725,
      "KMF": 18639426.22593246,
      "KRW": 51175421.460982695,
      "KWD": 13003.289887214292,
      "KYD": 35818.41383255736,
      "KZT": 18690033.962995164,
      "LAK": 484463737.8120335,
      "LBP": 64976431.22527812,
      "LBXAG": 1903.3712523633274,
      "LBXAUAM": 23.81992836968451,
      "LBXAUPM": 23.795981009973723,
      "LBXPDAM": 22.448784482864795,
      "LBXPDPM": 22.42352886679405,
      "LBXPTAM": 45.47872078487537,
      "LBXPTPM": 45.38448772589085,
      "LCO": 19692.47287427178,
      "LEAD": 600413.2795149557,
      "LINK": 1631.5102288239855,
      "LKR": 8717368.171486063,
      "LME-ALU": 468517.3574295568,
      "LME-LEAD": 599620.9129792989,
      "LME-NI": 63732.092503996035,
      "LME-TIN": 33950.04972999234,
      "LME-XCU": 143090.5240475954,
      "LME-ZNC": 390610.6433458224,
      "LRD": 6384854.320035516,
      "LSL": 672394.2172925805,
      "LTC": 319.5877128582196,
      "LTL": 126894.71819884764,
      "LVL": 25995.81439362713,
      "LYD": 197322.22731696692,
      "MAD": 398034.88549222203,
      "MDL": 773481.921060248,
      "MG": 161452.71200525886,
      "MGA": 170742187.4771615,
      "MKD": 2330500.9942574613,
      "MMK": 76394583.38995673,
      "MNT": 122898727.91833797,
      "MO": 32904.32455163253,
      "MOP": 345055.3122801944,
      "MRO": 15344762.009466939,
      "MUR": 1868767.759480083,
      "MVR": 663958.4566470619,
      "MWK": 35126815.429374024,
      "MXN": 877714.242952034,
      "MYR": 179906.18944275836,
      "MZN": 2743144.002870407,
      "NAD": 668348.3476073756,
      "NGN": 17820608.527464904,
      "NI": 61816.57320290808,
      "NIO": 1521703.1826534779,
      "NOK": 375678.1916033135,
      "NPR": 5086881.353515524,
      "NZD": 63455.99296344352,
      "OMR": 16534.638206924494,
      "OSMIUM": 0.7424098639366546,
      "PAB": 42978.0761210821,
      "PEN": 168104.05931011424,
      "PGK": 150860.48540499408,
      "PHP": 2197666.0450040824,
      "PKR": 7570211.182961424,
      "PLN": 171478.52425729862,
      "PYG": 298367610.89642256,
      "QAR": 156502.669809561,
      "RHENIUM": 843.282500944643,
      "RON": 187060.75226086308,
      "RSD": 4446776.036733452,
      "RUB": 3206164.860046254,
      "RUTH": 78.15633602775267,
      "RWF": 44594074.78896519,
      "SAR": 161360.96850325834,
      "SBD": 347416.3673605339,
      "SCR": 599987.5151584076,
      "SEK": 388479.1007317763,
      "SGD": 58077.58521778363,
      "SHP": 59234.97972654058,
      "SLL": 487921393.30042195,
      "SOS": 25142276.032062333,
      "SRD": 912535.8328684128,
      "SSP": 5597731.2347557945,
      "STD": 890043266.362215,
      "STEEL-HR": 1868634.198251694,
      "STEEL-RE": 1955522.5713987334,
      "STEEL-SC": 2966884.705171513,
      "SVC": 376271.0911796201,
      "SZL": 665857.1862378052,
      "THB": 1434493.0707861006,
      "TIN": 35117.435838580306,
      "TJS": 485448.44353449874,
      "TMT": 150485.53638948812,
      "TND": 123735.32171950722,
      "TOP": 98029.60056362353,
      "TRY": 593863.4451604637,
      "TTD": 292605.96490673936,
      "TWD": 1189378.9301351071,
      "TZS": 98821236.95441389,
      "UAH": 1191722.8666065494,
      "UGX": 151663291.9181575,
      "UNI": 2633.621513501395,
      "URANIUM": 945.0963321174484,
      "USD": 42968.36778447169,
      "UYU": 1921122.6247322639,
      "UZS": 465164685.26594144,
      "VEF": 9191059534974294,
      "VES": 199214.30644335234,
      "VND": 976017937.0541211,
      "VUV": 4869104.09002622,
      "WST": 111746.33160024532,
      "XAF": 4.030294515888864e-8,
      "XAG": 0.0005289751361818774,
      "XAU": 0.04228229144046888,
      "XCD": 0.000008610180708404646,
      "XCU": 0.00000662141035817083,
      "XDR": 0.000032587594330442714,
      "XLM": 0.000006316839636926475,
      "XOF": 4.029308593092186e-8,
      "XPD": 0.042967992654972094,
      "XPF": 2.204849040859786e-7,
      "XPT": 0.022508168123167225,
      "XRH": 0.3932378743062364,
      "XRP": 0.00001810536263180832,
      "YER": 10765207.231398873,
      "ZAR": 665938.1696323573,
      "ZMK": 387014563.74727035,
      "ZMW": 729732.7786500454,
      "ZNC": 350702.67313947045,
      "ZWL": 13837872.265040154,
    },
    "results": Array [
      Array [
        Object {
          "data": Object {
            "base": "BTC",
            "endpoint": "latest",
            "quote": "USD",
          },
          "id": "1",
          "rateLimitMaxAge": 176470588,
        },
        42968.36778447169,
      ],
      Array [
        Object {
          "data": Object {
            "base": "BTC",
            "endpoint": "latest",
            "quote": "XAU",
          },
          "id": "1",
          "rateLimitMaxAge": 176470588,
        },
        0.04228229144046888,
      ],
    ],
    "success": true,
    "timestamp": 1641990180,
    "unit": "per ounce",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "statusCode": 200,
}
`;

exports[`execute latest api returns success with single base/quote pair 1`] = `
Object {
  "data": Object {
    "result": 1817.0552439305814,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1817.0552439305814,
  "statusCode": 200,
}
`;

exports[`execute latest api should error with batched base symbols 1`] = `
Object {
  "error": Object {
    "feedID": "[BTC|XAU]/USD",
    "message": "Base symbol XAU,BTC is not batchable.",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;
